# pico-y-placa-bga

./: .gitignore  DOCUMENTACION.md  MANTENIMIENTO.md  PROPUESTAS.md  README.md
.atl/: skill-registry.md
.github/workflows/: ci.yml  scraper.yml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: api.js  main.js  storage.js  style.css
frontend/src/components/: hero.js  input.js  (+1 more)
frontend/test/: api.test.js  hero.test.js  input.test.js  result.test.js  setup.js  storage.test.js
openspec/: config.yaml
openspec/changes/: README.md
openspec/specs/: README.md
python/: debug_alcaldia_deep.py  debug_alcaldia_dump.py  debug_article.py  debug_compare.py  debug_dates.py  debug_dtb.py  debug_dtb2.py  debug_dtb_ajax.py  debug_dtb_api.py  debug_embedded.py  debug_extract.py  debug_extract_js.py  debug_googlenews.py  debug_regex.py  debug_scraper.py  debug_vanguardia.py  debug_verify.py  pyproject.toml
python/plate_parser/: __init__.py  parser.py  test_parser.py
python/scraper/: __init__.py  __main__.py  scraper.py  selectors.md  test_scraper.py
supabase/migrations/: 0001_create_rotations.down.sql  0001_create_rotations.sql  0002_create_exception_overrides.down.sql  0002_create_exception_overrides.sql  0003_create_holidays.down.sql  0003_create_holidays.sql  0004_seed_holidays_2026.down.sql  0004_seed_holidays_2026.sql  0005_seed_holidays_2027.down.sql  0005_seed_holidays_2027.sql
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
worker/src/: db.ts  index.ts  parser.ts  types.ts
worker/test/: index.test.ts
(+12 files in other folders)
