[project]
name = "pico-y-placa-bucaramanga"
version = "0.1.0"
description = "Pico y Placa Bucaramanga — plate parser, scraper, and supporting modules"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.pytest.ini_options]
testpaths = ["plate_parser", "scraper"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--tb=short",
    "--cov=plate_parser",
    "--cov=scraper",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.13"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
